--- a/index.html
+++ b/index.html
@@ -6,244 +6,408 @@
   <title>Jessi Presten - Junior Developer Portfolio</title>
   <meta name="description" content="Dynamic recent CS50 graduate portfolio">
   <meta name="keywords" content="Jessi Presten, Developer, CS50, Portfolio, Python, Web">
-  <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-  <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+  
+  
+  
 </head>
 
 <body class="index-page">
-
 <header id="header" class="header d-flex align-items-center sticky-top">
   <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
-    <a href="index.html" class="logo d-flex align-items-center">
-      <h1 class="sitename">DevFolio</h1>
-    </a>
+    <div class="progress-bar" role="progressbar" aria-valuenow="100" style="width: 100%;"></div>
+    <a href="index.html" class="logo d-flex align-items-center"></a>
     <nav id="navbar" class="navbar">
-      <ul>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
       <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
     </nav>
   </div>
 </header>
 
 <main class="main">
+  <section id="hero" class="hero section dark-background">
+    <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up">
+      <p><span class="typed" data-typed-items="Designer, Developer, Freelancer, Motivator"></span></p>
+    </div>
+  </section>
 
-<!-- Hero Section -->
-<section id="hero" class="hero section dark-background">
-  <img src="assets/img/hero-img.jpg" alt="Hero Image" data-aos="fade-in">
-  <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up">
-    <h2>I Am Jessi Presten</h2>
-    <p><span class="typed" data-typed-items="Designer, Developer, Freelancer, Motivator"></span></p>
-  </div>
-</section>
-
-<!-- About Section -->
-<section id="about" class="about section">
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
-    <div class="row gy-4">
-      <div class="col-md-6">
-        <div class="row justify-content-between gy-4">
-          <div class="col-lg-5">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="Profile Image">
-          </div>
-          <div class="col-lg-7 about-info">
+  <section id="about" class="about section">
+    <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <div class="row gy-4">
+        <div class="col-md-6">
+          <div class="about-info">
             <p><strong>Name:</strong> Jessi Presten</p>
             <p><strong>Profile:</strong> Junior Full Stack Developer</p>
             <p><strong>Email:</strong> jessi.presten@yahoo.com</p>
             <p><strong>Phone:</strong> (661) 644-1639</p>
+            <p><strong>YouTube:</strong> https://www.youtube.com/@jessipresten9042</p>
+            <p><strong>Github:</strong> <a href="https://github.com/jessipresten/CS50-Projects" target="_blank">GitHub</a></p>
+            <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/jessi-presten" target="_blank">LinkedIn</a></p>
           </div>
-        </div>
-
-        <div class="skills-content skills-animation">
-          <h5>Skills</h5>
-
-          <div class="progress">
-            <span class="skill">HTML <i class="val">100%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+          <div class="skills-content skills-animation">
+            <h4>Main Skills</h4>
+            <div class="progress"><span class="skill">HTML</span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" style="width: 100%;"></div>
+              </div>
+            </div>
+            <div class="progress"><span class="skill">CSS</span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" style="width: 100%;"></div>
+              </div>
+            </div>
+            <div class="progress"><span class="skill">JavaScript</span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" style="width: 100%;"></div>
+              </div>
+            </div>
+            <div class="progress"><span class="skill">Bootstrap</span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" style="width: 100%;"></div>
+              </div>
+            </div>
+            <div class="progress"><span class="skill">Python</span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" style="width: 100%;"></div>
+              </div>
             </div>
           </div>
-
-          <div class="progress">
-            <span class="skill">CSS <i class="val">100%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">JavaScript <i class="val">100%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">Bootstrap <i class="val">100%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
         </div>
-      </div>
-
-      <div class="col-md-6">
-        <div class="about-me">
-          <h4>About Me</h4>
-          <p>Dynamic recent CS50 graduate with a strong foundation in Python and web development, complemented by a passion for creating clean, efficient, and user-friendly solutions.</p>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</section>
-
-<!-- Resume Section -->
-<section id="resume" class="resume section">
-  <div class="container section-title" data-aos="fade-up">
-    <h2>Resume</h2>
-    <p>Recent Graduate Of CS50 Python, CS50 Web, and CS50 Introduction to Computer Science</p>
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-        <h3 class="resume-title">Summary</h3>
-        <div class="resume-item pb-0">
-          <h4>Jessi Presten</h4>
-          <ul>
-            <li>Los Angeles, CA</li>
-            <li>(661) 644-1639</li>
-            <li>jessi.presten@yahoo.com</li>
-          </ul>
-        </div>
-
-        <h3 class="resume-title">Education</h3>
-        <div class="resume-item">
-          <h4>CS50 Introduction to Computer Science</h4>
-          <h5>2023 - 2025</h5>
-          <p><em>Harvard CS50 Program</em></p>
-        </div>
-        <div class="resume-item">
-          <h4>CS50 Python</h4>
-          <h5>2023 - 2025</h5>
-          <p><em>Harvard CS50 Program</em></p>
-        </div>
-        <div class="resume-item">
-          <h4>CS50 Web</h4>
-          <h5>2023 - 2025</h5>
-          <p><em>Harvard CS50 Program</em></p>
-        </div>
-
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Portfolio Section -->
-<section id="portfolio" class="portfolio section">
-  <div class="container section-title" data-aos="fade-up">
-    <h2>Portfolio</h2>
-    <p>Listing of Top Completed Projects</p>
-  </div>
-  <div class="container">
-    <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
-
-      <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-        <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="Final Project">
-        <div class="portfolio-info">
-          <h4>Final CS50 Web Project</h4>
-          <p>Finance tracker for personal or business use</p>
-          <iframe width="75%" height="200" src="https://www.youtube.com/embed/HCTsYxEAZxU" title="Final Project" frameborder="0" allowfullscreen></iframe>
-        </div>
-      </div>
-
-
-        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-          <img src="assets/img/portfolio/product-1.jpg" class="img-fluid" alt="Network Project">
-          <div class="portfolio-info">
-            <h4>Network Project</h4>
-            <p>Project resembling Twitter functionality</p>
-            <iframe width="75%" height="200" src="https://www.youtube.com/embed/o5vYoOeDBx4" title="Network Project" frameborder="0" allowfullscreen></iframe>
+        <div class="col-md-6">
+          <div class="about-me">
+            <h4>About Me</h4>
+            <p>Dynamic recent CS50 graduate with a strong foundation in Python and web development, complemented by a passion for clean, user-focused design and scalable solutions.</p>
           </div>
         </div>
-  
-        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-          <img src="assets/img/portfolio/product-1.jpg" class="img-fluid" alt="Mail Project">
-          <div class="portfolio-info">
-            <h4>Mail Project</h4>
-            <p>Email sending and receiving app</p>
-            <iframe width="75%" height="200" src="https://www.youtube.com/embed/cqw_cwj29Q8" title="Mail" frameborder="0" allowfullscreen></iframe>
-          </div>
-        </div>
-  
-        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-          <img src="assets/img/portfolio/product-1.jpg" class="img-fluid" alt="Wiki Project">
-          <div class="portfolio-info">
-            <h4>Wiki Project</h4>
-            <p>Creating your own wiki pages</p>
-            <iframe width="75%" height="200" src="https://www.youtube.com/embed/1ehEWC1WVaY" title="Wiki Project" frameborder="0" allowfullscreen></iframe>
-          </div>
-        </div>
-  
       </div>
     </div>
   </section>
-  
-  </main>
-  
-  <footer id="footer" class="footer accent-background">
+
+  <section id="resume" class="resume section">
+    <div class="container section-title" data-aos="fade-up">
+      <h2>Resume</h2>
+      <p>Recent Graduate Of CS50 Python, CS50 Web, and CS50 Introduction to Computer Science</p>
+    </div>
     <div class="container">
-      <div class="copyright text-center">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">DevFolio</strong> <span>All Rights Reserved</span></p>
-      </div>
-      <div class="social-links d-flex justify-content-center">
-        <a href="https://www.linkedin.com/in/jessi-presten/" target="_blank"><i class="bi bi-linkedin"></i></a>
-      </div>
-      <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      <div class="row">
+        <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <h3 class="resume-title">Summary</h3>
+          <div class="resume-item pb-0">
+            <h4>Jessi Presten</h4>
+            <ul>
+              <li>Los Angeles, CA</li>
+              <li>(661) 644-1639</li>
+              <li>jessi.presten@yahoo.com</li>
+            </ul>
+          </div>
+          <h4 class="resume-title">Education </h4>
+          <h3 class="resume-title">Harvard CS50 Programs</h3>
+          <div class="resume-item">
+            <h4> Introduction to Computer Science</h4>
+            <h4> Introduction to Programming with Python</h4>
+            <h4> Web Programmimg with Python and JavaScript</h4>
+            <h5>2023 - 2025</h5>
+        </div>
       </div>
     </div>
-  </footer>
-  
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center">
-    <i class="bi bi-arrow-up-short"></i>
-  </a>
-  
-  <div id="preloader"></div>
-  
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/typed.js/typed.umd.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <!-- Main JS File -->
-  <script src="assets/js/main.js"></script>
-  
-  </body>
-  </html>
- 
- 
- 
- 
- 
+  </section>
+
+  <section id="portfolio" class="portfolio section">
+    <div class="container section-title" data-aos="fade-up">
+      <h2>Portfolio</h2>
+    </div>
+    <div class="container">
+      <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+        <div class="col-lg-4 col-md-6 portfolio-item">
+          <div class="portfolio-info">
+            <h4>Final CS50 Web Project</h4>
+            <p>Finance tracker for personal or business use</p>
+            <div class="ratio ratio-16x9">
+              <iframe src="https://www.youtube.com/embed/T-FifD2GrQ4" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 portfolio-item">
+          <div class="portfolio-info">
+            <h4>Network Project</h4>
+            <p>Project resembling Twitter functionality</p>
+            <div class="ratio ratio-16x9">
+              <iframe src="https://www.youtube.com/embed/o5vYoOeDBx4" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 portfolio-item">
+          <div class="portfolio-info">
+            <h4>Mail Project</h4>
+            <p>Email sending and receiving app</p>
+            <div class="ratio ratio-16x9">
+              <iframe src="https://www.youtube.com/embed/cqw_cwj29Q8" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 portfolio-item">
+          <div class="portfolio-info">
+            <h4>Wiki Project</h4>
+            <p>Creating your own Wiki pages</p>
+            <div class="ratio ratio-16x9">
+              <iframe src="https://www.youtube.com/embed/1ehEWC1WVaY" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</main>
+
+<footer id="footer" class="footer accent-background">
+  <div class="container">
+    <div class="copyright text-center">
+      <p>© <strong>DevFolio</strong>. All Rights Reserved</p>
+    </div>
+    <div class="social-links d-flex justify-content-center">
+      <a href="https://www.linkedin.com/in/jessi-presten/" target="_blank"><i class="bi bi-linkedin"></i></a>
+    </div>
+    <div class="credits">
+      Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+    </div>
+  </div>
+</footer>
+
+<a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center">
+  <i class="bi bi-arrow-up-short"></i>
+</a>
+<div id="preloader"></div>
+<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="assets/vendor/php-email-form/validate.js"></script>
+<script src="assets/vendor/aos/aos.js"></script>
+<script src="assets/vendor/typed.js/typed.umd.js"></script>
+<script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+<script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+<script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+<script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+<script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+<script src="assets/js/main.js"></script>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
